Update the header and the page title acccording to the new changes

--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,13 @@
     <meta name="theme-color" content="#E34E71" />
     <meta
       name="description"
-      content="2 Truths and 1 Lie"
+      content="Machine Common Sense"
     />
     <link rel="apple-touch-icon" href="icon128.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-    <title>2 Truths and 1 Lie</title>
+    <title>Machine Common Sense</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
